--- a/public/css/style.css
+++ b/public/css/style.css
@@ -908,4 +908,136 @@ header p {
     .mobil-action {
         padding: 0 18px 15px;
     }
+    
+    .haha {
+        display: flex;
+      }
+      
+      .hah {
+        background-color: black;
+        border-radius: 34px;
+        height: 34px;
+        width: 200px;
+        z-index: 6;
+        position: absolute;
+        top: 310px;
+        left: 100px;
+        animation: gas 3s infinite;
+      }
+      
+      @keyframes gas {
+        0% {
+          transform: translatex(0%);
+          opacity: 0;
+        }
+      
+        20% {
+          opacity: 1;
+        }
+      
+        100% {
+          transform: translatex(500%);
+          opacity: 0;
+        }
+      }
+      
+      .anime {
+        margin-top: 305px;
+        display: flex;
+        inset: 0;
+        justify-content: space-between;
+      }
+      
+      .anim {
+        background-color: aqua;
+        width: 14px;
+        height: 160px;
+        z-index: 1;
+        border-radius: 23px;
+        animation: fall 5s infinite ;
+      }
+      
+      .anim:nth-child(1)  { animation-delay: 0.1s; animation-duration: 4s; }
+      .anim:nth-child(2)  { animation-delay: 0.2s; animation-duration: 4s; }
+      .anim:nth-child(3)  { animation-delay: 0.3s; animation-duration: 4s; }
+      .anim:nth-child(4)  { animation-delay: 0.4s; animation-duration: 4s; }
+      .anim:nth-child(5)  { animation-delay: 0.5s; animation-duration: 4s; }
+      .anim:nth-child(6)  { animation-delay: 0.6s; animation-duration: 4s; }
+      .anim:nth-child(7)  { animation-delay: 0.7s; animation-duration: 4s; }
+      .anim:nth-child(8)  { animation-delay: 0.8s; animation-duration: 4s; }
+      .anim:nth-child(9)  { animation-delay: 0.9s; animation-duration: 4s; }
+      .anim:nth-child(10) { animation-delay: 1.0s; animation-duration: 4s; }
+      .anim:nth-child(11) { animation-delay: 1.1s; animation-duration: 4s; }
+      .anim:nth-child(12) { animation-delay: 1.2s; animation-duration: 4s; }
+      .anim:nth-child(13) { animation-delay: 1.3s; animation-duration: 4s; }
+      .anim:nth-child(14) { animation-delay: 1.4s; animation-duration: 4s; }
+      .anim:nth-child(15) { animation-delay: 1.5s; animation-duration: 4s; }
+      .anim:nth-child(16) { animation-delay: 1.6s; animation-duration: 4s; }
+      .anim:nth-child(17) { animation-delay: 1.7s; animation-duration: 4s; }
+      .anim:nth-child(18) { animation-delay: 1.8s; animation-duration: 4s; }
+      .anim:nth-child(19) { animation-delay: 1.9s; animation-duration: 4s; }
+      .anim:nth-child(20) { animation-delay: 2.0s; animation-duration: 4s; }
+      .anim:nth-child(21) { animation-delay: 2.1s; animation-duration: 4s; }
+      .anim:nth-child(22) { animation-delay: 2.2s; animation-duration: 4s; }
+      .anim:nth-child(23) { animation-delay: 2.3s; animation-duration: 4s; }
+      .anim:nth-child(24) { animation-delay: 2.4s; animation-duration: 4s; }
+      
+      @keyframes fall {
+        50%{
+          transform: translatey(-100%);
+        }
+        100%{
+          transform: translateY(0%);
+        }
+      }
+      
+      .animel {
+        display: flex;
+        justify-content: space-between;
+      }
+      
+      .anima {
+        background-color: aqua;
+        width: 14px;
+        height: 160px;
+        z-index: 1;
+        border-radius: 34px;
+        animation: zi 5s infinite ;
+      }
+      
+      .anima:nth-child(1)  { animation-delay: 0.1s; animation-duration: 4s; }
+      .anima:nth-child(2)  { animation-delay: 0.2s; animation-duration: 4s; }
+      .anima:nth-child(3)  { animation-delay: 0.3s; animation-duration: 4s; }
+      .anima:nth-child(4)  { animation-delay: 0.4s; animation-duration: 4s; }
+      .anima:nth-child(5)  { animation-delay: 0.5s; animation-duration: 4s; }
+      .anima:nth-child(6)  { animation-delay: 0.6s; animation-duration: 4s; }
+      .anima:nth-child(7)  { animation-delay: 0.7s; animation-duration: 4s; }
+      .anima:nth-child(8)  { animation-delay: 0.8s; animation-duration: 4s; }
+      .anima:nth-child(9)  { animation-delay: 0.9s; animation-duration: 4s; }
+      .anima:nth-child(10) { animation-delay: 1.0s; animation-duration: 4s; }
+      .anima:nth-child(11) { animation-delay: 1.1s; animation-duration: 4s; }
+      .anima:nth-child(12) { animation-delay: 1.2s; animation-duration: 4s; }
+      .anima:nth-child(13) { animation-delay: 1.3s; animation-duration: 4s; }
+      .anima:nth-child(14) { animation-delay: 1.4s; animation-duration: 4s; }
+      .anima:nth-child(15) { animation-delay: 1.5s; animation-duration: 4s; }
+      .anima:nth-child(16) { animation-delay: 1.6s; animation-duration: 4s; }
+      .anima:nth-child(17) { animation-delay: 1.7s; animation-duration: 4s; }
+      .anima:nth-child(18) { animation-delay: 1.8s; animation-duration: 4s; }
+      .anima:nth-child(19) { animation-delay: 1.9s; animation-duration: 4s; }
+      .anima:nth-child(20) { animation-delay: 2.0s; animation-duration: 4s; }
+      .anima:nth-child(21) { animation-delay: 2.1s; animation-duration: 4s; }
+      .anima:nth-child(22) { animation-delay: 2.2s; animation-duration: 4s; }
+      .anima:nth-child(23) { animation-delay: 2.3s; animation-duration: 4s; }
+      .anima:nth-child(24) { animation-delay: 2.4s; animation-duration: 4s; }
+      
+      @keyframes zi {
+        50%{
+          transform: translatey(100%);
+        }
+        100%{
+          transform: translateY(-0%);
+        }
+      }
+      
+      
 }
